feat: swagger delete created
